Fixed table header alignment.

--- a/static/style/global.css
+++ b/static/style/global.css
@@ -281,7 +281,8 @@ table {
     border: var(--wordplay-border-color) solid var(--wordplay-border-width);
 }
 
-td {
+td,
+th {
     padding: var(--wordplay-spacing);
     text-align: start;
 }
